tandoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tandoor
  namespace: vehagn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tandoor
  template:
    metadata:
      labels:
        app: tandoor
    spec:
      containers:
        - name: tandoor
          image: docker.io/vabene1111/recipes:2.0.1
          ports:
            - name: nginx
              containerPort: 80
            - name: django
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: nginx-config
              mountPath: /opt/recipes/nginx/conf.d/Recipes.conf
              subPath: Recipes.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
