tandoor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: vehagn
spec:
  type: ClusterIP
  selector:
    app: tandoor
  ports:
    - name: web
      port: 80
      targetPort: nginx
