tandoor/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tandoor
  namespace: vehagn
  annotations:
    link.argocd.argoproj.io/external-link: https://tandoor.s9n.no
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - tandoor.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tandoor
          port: 80
